--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
   gap: 10px;
   flex-wrap: wrap;
   max-height: 70vh;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .card {
   width: 200px;
